--- a/powerdns_install/files/pdns.conf
+++ b/powerdns_install/files/pdns.conf
@@ -295,7 +295,7 @@ launch=
 #################################
 # local-address	Local IP addresses to which we bind
 
-local-address=185.188.104.10, 185.188.104.11, 185.188.104.12, 185.188.104.13, 185.188.105.10, 185.188.105.11, 185.188.105.12, 185.188.106.10, 185.188.106.11, 185.188.107.10
+local-address=a.b.c.d, a.b.c.f
 
 # local-address-nonexist-fail=yes
 
