--- a/powerdns_docker/files/pdns.conf
+++ b/powerdns_docker/files/pdns.conf
@@ -295,7 +295,7 @@ launch=
 #################################
 # local-address	Local IP addresses to which we bind
 
-local-address=185.188.104.10, 185.188.104.11, 185.188.104.12, 185.188.104.13, 185.188.105.10, 185.188.105.11, 185.188.105.12, 185.188.106.10, 185.188.106.11, 185.188.107.10
+local-address=a.b.c.d, a.b.c.v 
 
 # local-address-nonexist-fail=yes
 
@@ -661,7 +661,7 @@ webserver-address=webserver_ip
 #################################
 # webserver-allow-from	Webserver/API access is only allowed from these subnets
 #
-webserver-allow-from=93.113.228.10/32, 79.175.191.16/32, 87.98.249.131/32
+webserver-allow-from=a.b.c.d/32
 
 #################################
 # webserver-hash-plaintext-credentials	Whether to hash passwords and api keys supplied in plaintext, to prevent keeping the plaintext version in memory at runtime
