--- a/powerdns_install/files/pdns.conf
+++ b/powerdns_install/files/pdns.conf
@@ -659,7 +659,7 @@ webserver-address=webserver_ip
 #################################
 # webserver-allow-from	Webserver/API access is only allowed from these subnets
 #
-webserver-allow-from=93.113.228.10/32, 79.175.191.16/32
+webserver-allow-from=a.b.c.d/32, a.b.c.f/32
 
 #################################
 # webserver-hash-plaintext-credentials	Whether to hash passwords and api keys supplied in plaintext, to prevent keeping the plaintext version in memory at runtime
